// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Combobox > Snapshot testing > should not show label 1`] = `
<div
  class="ds-flex ds-flex-col ds-relative"
>
  <div
    class="ds-flex ds-flex-row relative"
  >
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-label="Label"
      class="ds-font-arial ds-w-full ds-rounded-l ds-border-y ds-border-l ds-border-border-gray ds-bg-white ds-p-5 ds-text-black ds-outline-none placeholder:ds-text-inactive-gray disabled:ds-text-inactive-gray disabled:ds-pointer-events-none"
      data-headlessui-state=""
      id=":r5:"
      placeholder="(placeholder text)"
      role="combobox"
      type="text"
      value="Suomi"
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="material-symbols-outlined ds-select-none ds-rounded-r ds-border-y ds-border-r ds-border-border-gray ds-bg-white ds-p-5 ds-text-secondary-gray disabled:ds-text-inactive-gray"
      data-headlessui-state=""
      id="headlessui-combobox-button-:r8:"
      tabindex="-1"
      type="button"
    >
      expand_more
    </button>
  </div>
</div>
`;

exports[`Combobox > Snapshot testing > should render as disabled 1`] = `
<div
  class="ds-flex ds-flex-col ds-relative"
>
  <label
    class="ds-text-jod-black ds-text-form-label ds-mb-4"
    for=":ra:"
  >
    Label
  </label>
  <div
    class="ds-flex ds-flex-row relative"
  >
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      class="ds-font-arial ds-w-full ds-rounded-l ds-border-y ds-border-l ds-border-border-gray ds-bg-white ds-p-5 ds-text-black ds-outline-none placeholder:ds-text-inactive-gray disabled:ds-text-inactive-gray disabled:ds-pointer-events-none"
      data-disabled=""
      data-headlessui-state="disabled"
      disabled=""
      id=":ra:"
      placeholder="(placeholder text)"
      role="combobox"
      type="text"
      value="Suomi"
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="material-symbols-outlined ds-select-none ds-rounded-r ds-border-y ds-border-r ds-border-border-gray ds-bg-white ds-p-5 ds-text-secondary-gray disabled:ds-text-inactive-gray"
      data-disabled=""
      data-headlessui-state="disabled"
      disabled=""
      id="headlessui-combobox-button-:rd:"
      tabindex="-1"
      type="button"
    >
      expand_more
    </button>
  </div>
</div>
`;

exports[`Combobox > Snapshot testing > should render with defaults 1`] = `
<div
  class="ds-flex ds-flex-col ds-relative"
>
  <label
    class="ds-text-jod-black ds-text-form-label ds-mb-4"
    for=":r0:"
  >
    Label
  </label>
  <div
    class="ds-flex ds-flex-row relative"
  >
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      class="ds-font-arial ds-w-full ds-rounded-l ds-border-y ds-border-l ds-border-border-gray ds-bg-white ds-p-5 ds-text-black ds-outline-none placeholder:ds-text-inactive-gray disabled:ds-text-inactive-gray disabled:ds-pointer-events-none"
      data-headlessui-state=""
      id=":r0:"
      placeholder="(placeholder text)"
      role="combobox"
      type="text"
      value="Suomi"
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="material-symbols-outlined ds-select-none ds-rounded-r ds-border-y ds-border-r ds-border-border-gray ds-bg-white ds-p-5 ds-text-secondary-gray disabled:ds-text-inactive-gray"
      data-headlessui-state=""
      id="headlessui-combobox-button-:r3:"
      tabindex="-1"
      type="button"
    >
      expand_more
    </button>
  </div>
</div>
`;
